增加显示账户余额页面

--- a/static/html/nav.html
+++ b/static/html/nav.html
@@ -4,7 +4,7 @@
 <div class="king-horizontal-nav4">
     <div class="logo_wrap">
         <a class="logo" title="" href="javascript:;">
-            <img src="https://brucefeng-1251273438.cos.ap-shanghai.myqcloud.com/logo.png"
+            <img src="https://brucefeng-1251273438.cos.ap-shanghai.myqcloud.com/8.%E4%BB%A5%E5%A4%AA%E5%9D%8A%E7%BD%91%E9%A1%B5%E9%92%B1%E5%8C%85%E5%BC%80%E5%8F%91%E6%89%8B%E5%86%8C/logo.png"
                 alt="" class="logo mt10 ml20">
         </a>
     </div>
